# Caffe_custom

.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml
examples/: CMakeLists.txt
examples/aurora/: create_aurora.sh  make_aurora_mean.sh
examples/mnist/: lenet_train_test.prototxt
examples/pycaffe/layers/: pascal_multilabel_datalayers.py
include/caffe/: data_transformer.hpp
include/caffe/layers/: base_conv_layer.hpp  base_data_layer.hpp  bn_layer.hpp  conv_td_layer.hpp  eltwise_td_layer.hpp  image_dim_prefetching_layer.hpp  inner_product_td_layer.hpp  inv_pooling_layer.hpp  pooling_switches_layer.hpp  pooling_td_layer.hpp  relu_mask_layer.hpp  select_seg_binary_layer.hpp  slice_half_layer.hpp  superpixel_pooling1_layer.hpp  superpixel_pooling_layer.hpp  weightedSoftmax_loss_layer.hpp
include/caffe/util/: io.hpp
python/caffe/: coord_map.py
src/caffe/: CMakeLists.txt  data_transformer.cpp
src/caffe/layers/: base_conv_layer.cpp  base_data_layer.cpp  base_data_layer.cu  bn_layer.cpp  conv_td_layer.cpp  conv_td_layer.cu  deconv_layer.cpp  eltwise_td_layer.cpp  eltwise_td_layer.cu  image_dim_prefetching_layer.cpp  image_dim_prefetching_layer.cu  inner_product_td_layer.cpp  inner_product_td_layer.cu  inv_pooling_layer.cpp  pooling_layer.cpp  pooling_switches_layer.cpp  pooling_td_layer.cpp  pooling_td_layer.cu  relu_mask_layer.cpp  relu_mask_layer.cu  select_seg_binary_layer.cpp  slice_half_layer.cpp  superpixel_pooling1_layer.cpp  superpixel_pooling1_layer.cu  superpixel_pooling_layer.cpp  unpooling_layer.cpp  weightedSoftmax_loss_layer.cpp
src/caffe/proto/: caffe.proto
src/caffe/util/: blocking_queue.cpp  io.cpp
